# blockudokill

./: Cargo.toml  README.md  package-lock.json  package.json
public/: index.html
public/wasm/: blockudokill_solver_bg.wasm
solver/src/: ext.rs  game.rs  lib.rs
solver/src/game/: all_blocks.rs  block.rs  bonus_distribution.rs  game_board.rs  score.rs  solver.rs
src/: App.module.css  App.tsx  ext.rs  game.rs  lib.rs  main.rs
src/components/Block/: Block.module.css
src/components/BlocksForm/: BlocksForm.module.css  BlocksForm.tsx
src/components/BlocksPreview/: BlocksPreview.module.css  BlocksPreview.tsx
src/components/GameBoard/: GameBoard.module.css  GameBoard.tsx
src/enums/: GameBoardCellColors.ts  index.ts
src/game/: all_blocks.rs  block.rs  game_board.rs  ripe_cases.rs  score_distribution.rs  solution.rs  solver.rs
src/objects/: AllBlocks.ts  Block.ts
src/types/: SolveResult.ts
web/: package-lock.json  package.json
web/public/: index.html
web/public/wasm/: blockudokill_solver_bg.wasm
web/src/: App.module.css  App.tsx
web/src/components/Block/: Block.tsx
web/src/components/BlocksForm/: BlocksForm.module.css
web/src/components/BlocksPreview/: BlocksPreview.tsx
web/src/enums/: GameBoardCellColors.ts
web/src/objects/: AllBlocks.ts  AllStripedCells.ts  index.ts
web/src/types/: Placement.ts  index.ts
