[package]
name = "blockudokill-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
serde = {version = "1.0.145", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"